--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div id="main">
-    <h4>Hello there </h4>
+    <h4>Hello there I am here </h4>
     <div id="header" class="center-content clear-fix">
       <ul id="topContacts" class="flex-box"></ul>
     </div>
